Add frame offset for PDF selection bounds.

This CL modifies PDFWebContentsHelper::SelectionChanged so that it
retrieves the offset of the PDF's frame within the page, and adds it to
the selection bounds. This allows the selection handles and quick menu
to display in the correct location.

Bug: 773669
Change-Id: I4f3515b31d048f4e8368dfe35e092e252de0340c