content/browser/frame_host/render_widget_host_view_guest.h
@@ -71,6 +71,7 @@ class CONTENT_EXPORT RenderWidgetHostViewGuest
   void SetNeedsBeginFrames(bool needs_begin_frames) override;
   TouchSelectionControllerClientManager*
   GetTouchSelectionControllerClientManager() override;
+  gfx::Point GetViewOriginInRoot() const override;
 
   // RenderWidgetHostViewBase implementation.
   void InitAsPopup(RenderWidgetHostView* parent_host_view,
